# voser

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
docs/: README.md
include/: globalconfig.h  mainwindow.h  solution.h  solver.h  source.h  sourcestablemodel.h
include/widgets/: containerwidget.h  frequencymanagerwidget.h  plotwidget.h  sourcesmanagerwidget.h
src/: main.cpp  mainwindow.cpp  solver.cpp  sourcestablemodel.cpp
src/widgets/: containerwidget.cpp  frequencymanagerwidget.cpp  plotwidget.cpp  sourcesmanagerwidget.cpp
